--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
 - fix idle timeout 30s issue - request custom supervision timeout from CoreBluetooth client?
-- investigate if anything funky's still going on with the orders of the buttons
 - make buttons in app to start & stop server, or some kind of loop that runs it as soon as bluetooth is enabled
 - make the ui better
 - experiment with setting connection priority/latency - seems like this can't be done in Android from gatt server or in CoreBluetooth at all?
+    try this:
+        gatt_instance = device.connectGatt(autoclass('org.kivy.android.PythonActivity').mActivity, False, gatt_server_callback)
+        gatt_instance.requestConnectionPriority(priority_level)
 - experiment with bluetooth 5.x if not already using it - can't on my macbook, probably can't on my phone either
