--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
+- is there a memory leak?
 - make buttons in app to start & stop server, or some kind of loop that runs it as soon as bluetooth is enabled
 - make the ui better
 - experiment with bluetooth 5.x if not already using it - can't on my macbook, probably can't on my phone either
